--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         app:behavior_peekHeight="40dp"
         BottomSheetBehavior_Layout_behavior_halfExpandedRatio="0.5"
         app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
-        app:behavior_hideable="true"
+        app:behavior_hideable="false"
         
         app:cardCornerRadius="0dp"
         app:cardElevation="8dp">
