--- a/app/src/main/res/layout/content_main_codeEditor.xml
+++ b/app/src/main/res/layout/content_main_codeEditor.xml
@@ -6,7 +6,7 @@
 	android:orientation="vertical"
 	android:id="@+id/codeEditor"
     android:layout_marginBottom="40dp"
-	android:gravity="top|center_horizontal">
+	android:gravity="center_vertical|center_horizontal">
 
 	<TextView
 		android:layout_height="wrap_content"
