--- a/app/src/main/res/layout/content_main_codeEditor.xml
+++ b/app/src/main/res/layout/content_main_codeEditor.xml
@@ -5,14 +5,16 @@
 	android:layout_height="match_parent"
 	android:orientation="vertical"
 	android:id="@+id/codeEditor"
-    android:layout_marginBottom="40dp"
-	android:gravity="center_vertical|center_horizontal">
+	android:layout_marginBottom="40dp"
+	android:gravity="center_vertical|center_horizontal"
+	android:background="#FF686868">
 
 	<TextView
 		android:layout_height="wrap_content"
 		android:layout_width="wrap_content"
 		android:text="Code Editor"
-		android:id="@+id/teste"/>
+		android:id="@+id/teste"
+		android:textColor="#FFFFFFFF"/>
 
 </LinearLayout>
 
